Added parallel test to sonar