@@ -456,6 +456,33 @@
                     http://ec2-54-242-163-124.compute-1.amazonaws.com:8080/sonar/
                 </sonar.host.url>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <!-- 1C means 1 process per cpu core -->
+                            <forkCount>1C</forkCount>
+                            <reuseForks>true</reuseForks>
+
+                            <threadCount>1</threadCount>
+                            <perCoreThreadCount>true</perCoreThreadCount>
+                            <parallel>methods</parallel>
+
+                            <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
+                                -Dhazelcast.version.check.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=false
+                            </argLine>
+                            <groups>com.hazelcast.test.annotation.ParallelTest</groups>
+                            <excludedGroups>com.hazelcast.test.annotation.SerialTest</excludedGroups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <!-- use this profile if you only want to run the benchmarks-->
